samples/_failures_safe/1761543430_ea2dbc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35be6096.c: In function ‘main’:
./samples/SAFE/__tmp_35be6096.c:134:5: error: expected declaration or statement at end of input
  134 |     }
      |     ^
